[#4] - define REST api and implement controller with prepared post-service methods
